--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,8 @@ body {
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  line-height: 1.6rem;
+  letter-spacing: 0.02rem;
 }
 
 button {
